Add Privacy Policy page and update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a href="privacy.html" class="nav-link">Privacy</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -177,6 +180,7 @@
                         <li><a href="#features">Features</a></li>
                         <li><a href="#screenshots">Screenshots</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="privacy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
