--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CabBook - Taxi Driver Finance Tracker</title>
     <meta name="description" content="Track fares, expenses & profits with automatic fee calculations. The ultimate finance tracker for taxi drivers.">
+    <meta name="apple-itunes-app" content="app-id=6751417286">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -143,7 +144,7 @@
                 <h2>Stop Guessing Your Profits</h2>
                 <p>Start tracking them with CabBook today</p>
                 <div class="download-buttons">
-                    <a href="#" class="btn btn-primary btn-large">Download for iOS</a>
+                    <a href="https://apps.apple.com/app/id6751417286" class="btn btn-primary btn-large">Download for iOS</a>
                 </div>
             </div>
         </div>
